//! gRPC implementations for Memory service
//!
//! This module provides gRPC client implementations for the Memory service.

use async_trait::async_trait;
use chrono::{DateTime, Utc};
use std::collections::HashMap;
use uuid::Uuid;

use crate::modules::ipc::memory::client::{MemoryChainIntegrationClient, MemoryClient};
use crate::modules::ipc::memory::responses::{
    CreateConversationFromChainExecutionResponse, GetConversationHistoryForChainResponse,
    GetHistoryResponse, ListConversationsResponse, SearchMessagesResponse,
    StoreChainResultInConversationResponse,
};
use crate::modules::ipc::memory::types::{Conversation, Message, StepResult};
use crate::modules::ipc::IpcResult;

/// gRPC implementation of the Memory client
pub struct GrpcMemoryClient {
    // This would contain the generated gRPC client
    // client: memory_client::MemoryClient<tonic::transport::Channel>,
}

impl GrpcMemoryClient {
    /// Create a new gRPC Memory client
    pub async fn new(addr: &str) -> Result<Self, tonic::transport::Error> {
        // This would create the gRPC client
        // let client = memory_client::MemoryClient::connect(addr).await?;
        Ok(Self {
            // client,
        })
    }
}

#[async_trait]
impl MemoryClient for GrpcMemoryClient {
    async fn create_conversation(
        &self,
        _metadata: HashMap<String, String>,
        _user_id: &str,
        _title: Option<&str>,
        _tags: Vec<String>,
        _initial_messages: Vec<Message>,
    ) -> IpcResult<Conversation> {
        // Stub implementation for now
        let id = Uuid::new_v4().to_string();
        let now = Utc::now();

        Ok(Conversation {
            id,
            messages: Vec::new(),
            metadata: HashMap::new(),
            created_at: now,
            updated_at: now,
            user_id: "stub-user".to_string(),
            title: Some("New Conversation".to_string()),
            tags: vec!["stub".to_string()],
        })
    }

    async fn get_conversation(&self, _conversation_id: &str) -> IpcResult<Conversation> {
        // Stub implementation for now
        let id = Uuid::new_v4().to_string();
        let now = Utc::now();

        Ok(Conversation {
            id,
            messages: Vec::new(),
            metadata: HashMap::new(),
            created_at: now,
            updated_at: now,
            user_id: "stub-user".to_string(),
            title: Some("Stub Conversation".to_string()),
            tags: vec!["stub".to_string()],
        })
    }

    async fn add_message(
        &self,
        _conversation_id: &str,
        _role: &str,
        _content: &str,
        _metadata: HashMap<String, String>,
        _parent_id: Option<&str>,
    ) -> IpcResult<Message> {
        // Stub implementation for now
        let id = Uuid::new_v4().to_string();
        let now = Utc::now();

        Ok(Message {
            id,
            role: "user".to_string(),
            content: "Stub message".to_string(),
            timestamp: now,
            metadata: HashMap::new(),
            parent_id: None,
            token_count: Some(10),
        })
    }

    async fn get_history(
        &self,
        _conversation_id: &str,
        _max_tokens: Option<u32>,
        _max_messages: Option<u32>,
        _include_system_messages: bool,
        _format: Option<&str>,
    ) -> IpcResult<GetHistoryResponse> {
        // Stub implementation for now
        Ok(GetHistoryResponse {
            messages: Vec::new(),
            total_tokens: 0,
            formatted_history: Some("".to_string()),
        })
    }

    async fn save_conversation(&self, _conversation_id: &str) -> IpcResult<()> {
        // Stub implementation for now
        Ok(())
    }

    async fn load_conversation(&self, _conversation_id: &str) -> IpcResult<Conversation> {
        // Stub implementation for now
        let id = Uuid::new_v4().to_string();
        let now = Utc::now();

        Ok(Conversation {
            id,
            messages: Vec::new(),
            metadata: HashMap::new(),
            created_at: now,
            updated_at: now,
            user_id: "stub-user".to_string(),
            title: Some("Loaded Conversation".to_string()),
            tags: vec!["stub".to_string()],
        })
    }

    async fn delete_conversation(&self, _conversation_id: &str) -> IpcResult<()> {
        // Stub implementation for now
        Ok(())
    }

    async fn list_conversations(
        &self,
        _limit: Option<u32>,
        _offset: Option<u32>,
        _user_id: Option<&str>,
        _tag_filter: Vec<String>,
        _start_date: Option<DateTime<Utc>>,
        _end_date: Option<DateTime<Utc>>,
    ) -> IpcResult<ListConversationsResponse> {
        // Stub implementation for now
        Ok(ListConversationsResponse {
            conversations: Vec::new(),
            total_count: 0,
        })
    }

    async fn search_messages(
        &self,
        _query: &str,
        _limit: Option<u32>,
        _offset: Option<u32>,
        _conversation_id: Option<&str>,
        _user_id: Option<&str>,
        _role: Option<&str>,
        _start_date: Option<DateTime<Utc>>,
        _end_date: Option<DateTime<Utc>>,
    ) -> IpcResult<SearchMessagesResponse> {
        // Stub implementation for now
        Ok(SearchMessagesResponse {
            results: Vec::new(),
            total_count: 0,
        })
    }
}

/// gRPC implementation of the Memory-Chain integration client
pub struct GrpcMemoryChainIntegrationClient {
    // This would contain the generated gRPC client
    // client: memory_chain_integration_client::MemoryChainIntegrationClient<tonic::transport::Channel>,
}

impl GrpcMemoryChainIntegrationClient {
    /// Create a new gRPC Memory-Chain integration client
    pub async fn new(addr: &str) -> Result<Self, tonic::transport::Error> {
        // This would create the gRPC client
        // let client = memory_chain_integration_client::MemoryChainIntegrationClient::connect(addr).await?;
        Ok(Self {
            // client,
        })
    }
}

#[async_trait]
impl MemoryChainIntegrationClient for GrpcMemoryChainIntegrationClient {
    async fn get_conversation_history_for_chain(
        &self,
        _conversation_id: &str,
        _chain_id: &str,
        _max_tokens: Option<u32>,
        _max_messages: Option<u32>,
        _include_system_messages: bool,
        _format: Option<&str>,
        _additional_context: Option<&str>,
    ) -> IpcResult<GetConversationHistoryForChainResponse> {
        // Stub implementation for now
        Ok(GetConversationHistoryForChainResponse {
            formatted_history: "".to_string(),
            messages: Vec::new(),
            total_tokens: 0,
        })
    }

    async fn store_chain_result_in_conversation(
        &self,
        _conversation_id: &str,
        _chain_id: &str,
        _execution_id: &str,
        _result: &str,
        _step_results: Vec<StepResult>,
        _store_step_results: bool,
        _metadata: HashMap<String, String>,
    ) -> IpcResult<StoreChainResultInConversationResponse> {
        // Stub implementation for now
        Ok(StoreChainResultInConversationResponse {
            message_id: Uuid::new_v4().to_string(),
            step_message_ids: Vec::new(),
        })
    }

    async fn create_conversation_from_chain_execution(
        &self,
        _chain_id: &str,
        _execution_id: &str,
        _input: &str,
        _result: &str,
        _step_results: Vec<StepResult>,
        _store_step_results: bool,
        _user_id: &str,
        _title: Option<&str>,
        _tags: Vec<String>,
        _metadata: HashMap<String, String>,
    ) -> IpcResult<CreateConversationFromChainExecutionResponse> {
        // Stub implementation for now
        Ok(CreateConversationFromChainExecutionResponse {
            conversation_id: Uuid::new_v4().to_string(),
        })
    }
}

// TODO: Add gRPC server implementations for MemoryService and MemoryChainIntegrationService
